// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding should render Onboarding 1`] = `
<div>
  <div
    class="onboarding-tip"
  >
    <div
      class="icon icon--styles"
      style="min-width: 32px;"
    />
    <div
      class="onboarding-tip__msg"
    >
      Onboarding tip goes here.
    </div>
  </div>
</div>
`;

exports[`Onboarding should render Onboarding with custom className and icon style 1`] = `
<div>
  <div
    class="onboarding-tip custom-class-name"
  >
    <div
      class="icon icon--styles"
      style="min-width: 32px; background-color: red;"
    />
    <div
      class="onboarding-tip__msg custom-class-name"
    >
      Onboarding tip goes here.
    </div>
  </div>
</div>
`;
